--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,12 +8,8 @@
     </title>
 </head>
 <body>
-    <header>
-        Page Header
-    </header>
+    <%- include('_header'); %>
     <h1>Codeial / <%= title %></h1>
-    <footer>
-        Page Footer
-    </footer>
+    <%- include('_footer'); %>
 </body>
 </html>
