--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,10 +6,12 @@
     <title>
         <%= title %>
     </title>
+    <link rel="stylesheet" href="/css/layout.css">
 </head>
 <body>
     <%- include('_header'); %>
     <%- body %>
     <%- include('_footer'); %>
+    <script type="javascript/text" src="/js/script.js"></script>
 </body>
 </html>
