--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,1 +1,5 @@
-<h1>Codeial / <%= title %></h1>
+<link rel="stylesheet" href="/css/user_profile.css">
+
+<main>
+    <h1>Codeial / <%= title %></h1>
+</main>
