--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,11 +7,13 @@
         <%= title %>
     </title>
     <link rel="stylesheet" href="/css/layout.css">
+    <%- style %>
 </head>
 <body>
     <%- include('_header'); %>
     <%- body %>
     <%- include('_footer'); %>
     <script type="javascript/text" src="/js/script.js"></script>
+    <%- script %>
 </body>
 </html>
