setting current authenticated user

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -2,4 +2,7 @@
 
 <main>
     <h1>Codeial / <%= title %></h1>
+    <p>user id: <%= user.id %></p>
+    <p>name: <%= user.name %></p>
+    <p>email: <%= user.email %></p>
 </main>
