--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,9 +1,16 @@
 * {
-  margin: 0;
   padding: 0;
 }
 
 body {
-  padding: 8px;
-  text-align: center;
+  margin: 0;
+}
+
+body .layout-main {
+  min-height: 80vh;
+}
+
+input {
+  padding: 8px 12px;
+  margin: 8px 4px;
 }
