--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,9 +1,17 @@
 * {
-    margin: 0;
     padding: 0;
 }
 
 body {
-    padding: 8px;
-    text-align: center;
+    margin: 0;
+    // text-align: center;
+
+    .layout-main { 
+        min-height: 80vh;
+    }
+}
+
+input {
+    padding: 8px 12px;
+    margin: 8px 4px;
 }
