--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,25 +1,27 @@
 <header>
-    Page Header
+    <h4>Page Header</h4>
 
-    <ul>
-        <li>
-            <a href="/">Home</a>
-        </li>
-        <% if (locals.user) { %>
+    <nav>
+        <ul>
             <li>
-                <a href="/users/profile"> <%= user.name %> </a>
+                <a href="/">Home</a>
             </li>
-            <li>
-                <a href="/users/sign-out">Sign Out</a>
-            </li>
-        <% } else { %>
-            <li>
-                <a href="/users/sign-in">Sign In</a>
-            </li>
-            <li>
-                <a href="/users/sign-up">Sign Up</a>
-            </li>
-        <% } %>
-    </ul>
+            <% if (locals.user) { %>
+                <li>
+                    <a href="/users/profile"> <%= user.name %> </a>
+                </li>
+                <li>
+                    <a href="/users/sign-out">Sign Out</a>
+                </li>
+            <% } else { %>
+                <li>
+                    <a href="/users/sign-in">Sign In</a>
+                </li>
+                <li>
+                    <a href="/users/sign-up">Sign Up</a>
+                </li>
+            <% } %>
+        </ul>
+    </nav>
 
 </header>
