--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,9 +1,14 @@
-<main>
-    <h1>Sign In</h1>
+<link rel="stylesheet" href="/css/sign_in.css">
 
-    <form action="/users/create-session" method="post">
-        <input type="email" name="email" id="email" placeholder="Your Email Address" required />
-        <input type="password" name="password" id="password" placeholder="Your Password" required />
-        <input type="submit" value="Login" />
-    </form>
-</main>
+<h1 class="page-title">Sign In</h1>
+
+<form class="sign-in-content" action="/users/create-session" method="post">
+    <input type="email" name="email" id="email" placeholder="Your Email Address" required />
+    <input type="password" name="password" id="password" placeholder="Your Password" required />
+    <input type="submit" value="Login" />
+    <a class="auth-page-button" href="/users/sign-up">
+        <button type="button">
+            Sign Up
+        </button>
+    </a>
+</form>
