added post schema for posts

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,12 @@
 <h1>Codeial / <%= title %></h1>
+
+<section id="feed-posts">
+    <h4>Posts</h4>
+    <form class="post-form" action="" id="new-post-form" method="post">
+        <div class="row">
+            <label for="content">Content</label>
+            <textarea name="content" id="content" cols="30" rows="3"></textarea>
+        </div>
+        <input type="submit" value="Post">
+    </form>
+</section>
