--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -4,13 +4,14 @@ header {
     justify-content: space-between;
     padding: 0px 20px;
     // max-width: 80%;
-    background-color: #fbfffcd5;
+    background-color: #3949AB;
     box-shadow: 0px 0px 2px 0px #414141de;
     border-bottom: 1px;
 
-    h4 {
+    a, h4 {
         text-transform: uppercase;
-        color: #8dc000f3;
+        color: #ffffff;
+        text-decoration: none;
     }
 
     nav {
@@ -29,12 +30,12 @@ header {
                 text-transform: uppercase;
                 
                 &:hover {
-                    border-bottom: 2px solid #547200f3;
+                    border-bottom: 2px solid #fffffff3;
                     padding-bottom: 6px;
                 }
 
                 a {
-                    color: #8dc000f3;
+                    color: #fafafff3;
                     text-decoration: none;
                 }
             }
