--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,6 +19,15 @@
             <% for(post of posts) { %>
                 <li>
                     <p><%= post.content %> <abbr title="<%= post.user.email %>"><span><%= post.user.name %></span></abbr> </p>
+                    <div class="post-comments">
+                        <% if (locals.user) { %>
+                            <form action="/comments/create" method="post">
+                                <input type="text" name="content" id="comment" required placeholder="Type Your Comment here..." />
+                                <input type="hidden" name="post" value="<%= post.id %>" />
+                                <input type="submit" value="Comment" />
+                            </form>
+                        <% } %>
+                    </div>
                 </li>
             <% } %>
         </ul>
