--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -9,3 +9,17 @@
 #feed-posts .posts-list-container ul {
   padding: 10px auto;
 }
+
+#feed-posts .posts-list-container .post-comments {
+  border: 1px solid #4e4a4a31;
+  padding: 8px;
+}
+
+#feed-posts .posts-list-container .post-comments .post-comments-input {
+  padding-left: 10px;
+}
+
+#feed-posts .posts-list-container .post-comments .post-comments-list {
+  margin: 10px;
+  padding: 6px 10px;
+}
