--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,12 +21,25 @@
                     <p><%= post.content %> <abbr title="<%= post.user.email %>"><span><%= post.user.name %></span></abbr> </p>
                     <div class="post-comments">
                         <% if (locals.user) { %>
-                            <form action="/comments/create" method="post">
+                            <form class="post-comments-input" action="/comments/create" method="post">
                                 <input type="text" name="content" id="comment" required placeholder="Type Your Comment here..." />
                                 <input type="hidden" name="post" value="<%= post.id %>" />
                                 <input type="submit" value="Comment" />
                             </form>
                         <% } %>
+                        <div class="post-comments-list">
+                            <% if (post.comments) { %>
+                                <ul id="post-comments-<%= post.id %>">
+                                    <% for (comment of post.comments) { %>
+                                        <li>
+                                            <p>
+                                                <%= comment.content %> <small><%= comment.user.name %></small>
+                                            </p>
+                                        </li>
+                                    <% } %>
+                                </ul>
+                            <% } %>
+                        </div>
                     </div>
                 </li>
             <% } %>
