added deleting a comment (authorized)

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,7 +39,11 @@
                                     <% for (comment of post.comments) { %>
                                         <li>
                                             <p>
-                                                <%= comment.content %> <small><%= comment.user.name %></small>
+                                                <%= comment.content %> 
+                                                <small><%= comment.user.name %></small>
+                                                <% if (locals.user && locals.user.id === comment.user.id) { %>
+                                                    <small><a href="/comments/delete/<%= comment.id %>">delete-comment</a></small>
+                                                <% } %>
                                             </p>
                                         </li>
                                     <% } %>
