--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
         <form class="post-form" action="/posts/create" id="new-post-form" method="post">
             <div class="row">
                 <label for="content">Content</label>
-                <textarea name="content" id="content" cols="30" rows="3" required></textarea>
+                <textarea name="content" id="content" cols="30" rows="3" required placeholder="Type Here Your Idea here..." ></textarea>
             </div>
             <input type="submit" value="Post">
         </form>
@@ -17,41 +17,7 @@
     <div class="posts-list-container">
         <ul>
             <% for(post of posts) { %>
-                <li>
-                    <p>
-                        <%= post.content %> 
-                        <abbr title="<%= post.user.email %>"><span><%= post.user.name %></span></abbr>
-                        <% if (locals.user && locals.user.id === post.user.id) { %>
-                            <small><a href="/posts/delete/<%= post.id %>">delete-post</a></small>
-                        <% } %>
-                    </p>
-                    <div class="post-comments">
-                        <% if (locals.user) { %>
-                            <form class="post-comments-input" action="/comments/create" method="post">
-                                <input type="text" name="content" id="comment" required placeholder="Type Your Comment here..." />
-                                <input type="hidden" name="post" value="<%= post.id %>" />
-                                <input type="submit" value="Comment" />
-                            </form>
-                        <% } %>
-                        <div class="post-comments-list">
-                            <% if (post.comments) { %>
-                                <ul id="post-comments-<%= post.id %>">
-                                    <% for (comment of post.comments) { %>
-                                        <li>
-                                            <p>
-                                                <%= comment.content %> 
-                                                <small><%= comment.user.name %></small>
-                                                <% if (locals.user && locals.user.id === comment.user.id) { %>
-                                                    <small><a href="/comments/delete/<%= comment.id %>">delete-comment</a></small>
-                                                <% } %>
-                                            </p>
-                                        </li>
-                                    <% } %>
-                                </ul>
-                            <% } %>
-                        </div>
-                    </div>
-                </li>
+                <%- include('_post'); -%>
             <% } %>
         </ul>
     </div>
