added user profile link

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,3 +22,12 @@
         </ul>
     </div>
 </section>
+
+<section class="user-friends">
+    <h4>Friends</h4>
+    <% for (user of all_users) { %>
+        <p>
+            <a href="/users/profile/<%= user.id %>"><%= user.name %></a>
+        </p>
+    <% } %>
+</section>
