--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/css/user_profile.css">
 
 <h1>Codeial / <%= title %></h1>
-<p>user id: <%= user.id %></p>
-<p>name: <%= user.name %></p>
-<p>email: <%= user.email %></p>
+<p>user id: <%= profile_user.id %></p>
+<p>name: <%= profile_user.name %></p>
+<p>email: <%= profile_user.email %></p>
