--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,30 +1,77 @@
 
-#feed-posts {
-    .post-form {
-        align-items: center;
+.home-container {
+    display: flex;
+
+    a {
+        text-decoration: none;
+        color: #4914daec;
     }
 
-    .posts-list-container {
-        margin: 10px 24px;
+    .section-title {
+        color: #37198bec;
+        margin-block: 0;
+        font-size: 2em;
+        margin-bottom: 10px;
+        padding-bottom: 8px;
+        border-bottom: 1px solid #0022;
+        padding-left: 10px;
+    }
 
-        ul {
-            padding: 10px auto;
-        }
+    #feed-posts {
+        width: 70%;
+        padding: 10px;
 
-        .post-comments {
-            // background-color: #ffffffd0;
-            border: 1px solid #4e4a4a31;
-            padding: 8px;
+        .post-form {
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            margin-bottom: 20px;
+            border-bottom: 1px solid #0022;
 
-            .post-comments-input {
-                padding-left: 10px;
+            .row {
+                display: flex;
+                align-items: center;
+                padding: 10px;
+
+                label {
+                    padding: 10px;
+                }
+
+                textarea {
+                    padding: 10px;
+                }
             }
-
-            .post-comments-list {
-                margin: 10px;
-                padding: 6px 10px;
-                // background-color: #FFF;
+        }
+    
+        .posts-list-container {
+            margin: 10px 24px;
+    
+            ul {
+                padding: 10px auto;
+            }
+    
+            .post-comments {
+                // background-color: #ffffffd0;
+                border: 1px solid #4e4a4a31;
+                padding: 8px;
+    
+                .post-comments-input {
+                    padding-left: 10px;
+                }
+    
+                .post-comments-list {
+                    margin: 10px;
+                    padding: 6px 10px;
+                    // background-color: #FFF;
+                }
             }
         }
+    }
+
+    .user-friends {
+        width: 30%;
+        padding: 10px;
+        border-left: 1px solid #0022;
     }
 }
