--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,33 +1,35 @@
 <link rel="stylesheet" href="/css/home.css">
 
-<h4 style="color: #2f00b1; margin-block: 0px; text-align: center; margin-top: 10px;"><%= title %></h4>
+<!-- <h4 style="color: #2f00b1; margin-block: 0px; text-align: center; margin-top: 10px;"><%= title %></h4> -->
 
-<section id="feed-posts">
-    <h3>Posts</h3>
-    <% if (locals.user) { %>
-        <form class="post-form" action="/posts/create" id="new-post-form" method="post">
-            <div class="row">
-                <label for="content">Content</label>
-                <textarea name="content" id="content" cols="30" rows="3" required placeholder="Type Here Your Idea here..." ></textarea>
-            </div>
-            <input type="submit" value="Post">
-        </form>
-    <% } %>
-
-    <div class="posts-list-container">
-        <ul>
-            <% for(post of posts) { %>
-                <%- include('_post'); -%>
-            <% } %>
-        </ul>
-    </div>
-</section>
-
-<section class="user-friends">
-    <h4>Friends</h4>
-    <% for (user of all_users) { %>
-        <p>
-            <a href="/users/profile/<%= user.id %>"><%= user.name %></a>
-        </p>
-    <% } %>
-</section>
+<div class="home-container">
+    <section id="feed-posts">
+        <h3 class="section-title">Posts</h3>
+        <% if (locals.user) { %>
+            <form class="post-form" action="/posts/create" id="new-post-form" method="post">
+                <div class="row">
+                    <label for="content">Content</label>
+                    <textarea name="content" id="content" cols="40" rows="3" required placeholder="Type Here Your Idea here..." ></textarea>
+                </div>
+                <input type="submit" value="Post">
+            </form>
+        <% } %>
+    
+        <div class="posts-list-container">
+            <ul>
+                <% for(post of posts) { %>
+                    <%- include('_post'); -%>
+                <% } %>
+            </ul>
+        </div>
+    </section>
+    
+    <section class="user-friends">
+        <h4 class="section-title">Friends</h4>
+        <% for (user of all_users) { %>
+            <p>
+                <a href="/users/profile/<%= user.id %>"><%= user.name %></a>
+            </p>
+        <% } %>
+    </section>
+</div>
