--- a/assets/css/user_profile.css
+++ b/assets/css/user_profile.css
@@ -1,8 +1,37 @@
 /* This CSS file for 'user_profile' page styling */
 main {
   text-align: left;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 main h1 {
   color: #289743;
+  text-align: center;
+  margin-top: 20px !important;
+  margin: 10px auto;
+  margin-block: 0px;
+}
+
+main #update-profile-btn {
+  padding: 10px 16px;
+  margin: 20px auto;
+}
+
+main .user-profile-info {
+  visibility: visible;
+}
+
+main .user-profile-info .row {
+  padding: 10px;
+}
+
+main .user-profile-info .row strong {
+  margin-right: 10px;
+}
+
+main .user-profile-info-form {
+  visibility: hidden;
 }
