--- a/assets/scss/user_profile.scss
+++ b/assets/scss/user_profile.scss
@@ -28,6 +28,8 @@ main {
 
             strong {
                 margin-right: 10px;
+                color: #340dc4;
+                text-transform: capitalize;
             }
         }
     }
