--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
             <form class="post-form" action="/posts/create" id="new-post-form" method="post">
                 <div class="row">
                     <label for="content">Content</label>
-                    <textarea name="content" id="content" cols="40" rows="3" required placeholder="Type Here Your Idea here..." ></textarea>
+                    <textarea name="content" id="content" cols="40" rows="3" required placeholder="Type Your Idea here..." ></textarea>
                 </div>
                 <input type="submit" value="Post">
             </form>
