--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -41,7 +41,7 @@
             }).show();
         <% } %>
     </script>
-    <script type="javascript/text" src="/js/script.js"></script>
+    <!-- <script type="javascript/text" src="/js/script.js"></script> -->
     <%- script %>
 </body>
 </html>
