--- a/assets/css/user_profile.css
+++ b/assets/css/user_profile.css
@@ -20,10 +20,6 @@ main #update-profile-btn {
   margin: 20px auto;
 }
 
-main .user-profile-info {
-  visibility: visible;
-}
-
 main .user-profile-info .row {
   padding: 10px;
 }
@@ -35,5 +31,21 @@ main .user-profile-info .row strong {
 }
 
 main .user-profile-info-form {
-  visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 40px;
+  box-shadow: 0px 0px 3px 0px #222;
+  border-radius: 4px;
+}
+
+main .user-profile-info-form .row {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: nowrap;
+}
+
+main .user-profile-info-form .row label {
+  margin-right: 10px;
 }
