--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
             </form>
         <% } %>
     
-        <div class="posts-list-container">
+        <div class="posts-list-container" id="posts-list-container">
             <ul>
                 <% for(post of posts) { %>
                     <%- include('_post'); -%>
