Added Deleting a post

--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -3,7 +3,7 @@
         <%= post.content %> 
         <abbr title="<%= post.user.email %>"><span><%= post.user.name %></span></abbr>
         <% if (locals.user && locals.user.id === post.user.id) { %>
-            <small><a id="delete-post-btn" href="/posts/delete/<%= post.id %>">delete-post</a></small>
+            <small><a class="delete-post-button" id="delete-post-btn" href="/posts/delete/<%= post.id %>">delete-post</a></small>
         <% } %>
     </p>
     <div class="post-comments">
