--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -1,9 +1,9 @@
-<li>
+<li id="comment-<%= comment.id %>">
     <p>
         <%= comment.content %> 
         <small><%= comment.user.name %></small>
         <% if (locals.user && locals.user.id === comment.user.id) { %>
-            <small><a href="/comments/delete/<%= comment.id %>">delete-comment</a></small>
+            <small><a class="delete-comment-button" href="/comments/delete/<%= comment.id %>">delete-comment</a></small>
         <% } %>
     </p>
 </li>
