--- a/assets/css/user_profile.css
+++ b/assets/css/user_profile.css
@@ -24,6 +24,20 @@ main .user-profile-info .row {
   padding: 10px;
 }
 
+main .user-profile-info .row .user-avatar-div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+main .user-profile-info .row .user-avatar-div .user-profile-avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 2px solid #47358a;
+  border-spacing: 1px;
+}
+
 main .user-profile-info .row strong {
   margin-right: 10px;
   color: #340dc4;
