--- a/assets/scss/user_profile.scss
+++ b/assets/scss/user_profile.scss
@@ -26,6 +26,20 @@ main {
         .row {
             padding: 10px;
 
+            .user-avatar-div {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                .user-profile-avatar {
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 50%;
+                    border: 2px solid #47358a;
+                    border-spacing: 1px;
+                }   
+            }
+
             strong {
                 margin-right: 10px;
                 color: #340dc4;
