Added Social Authentication (google sign-in)

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -10,6 +10,21 @@ body .layout-main {
   min-height: 80vh;
 }
 
+body .layout-main p {
+  text-align: center;
+  margin-top: 20px;
+  margin-block-start: 1.2em;
+}
+
+body .layout-main p .btn-google-sign-in {
+  text-decoration: none;
+  border: 1px solid #1d1757ef;
+  background-color: #1e43e7ea;
+  color: #FFF;
+  padding: 10px 20px;
+  border-radius: 2px;
+}
+
 input {
   padding: 8px 12px;
   margin: 8px 4px;
