--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -12,3 +12,7 @@
         </button>
     </a>
 </form>
+
+<p>
+    <a class="btn-google-sign-in" href="/users/auth/google">Sign In with Google</a>
+</p>
