--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -14,3 +14,7 @@
         </button>
     </a>
 </form>
+
+<p>
+    <a class="btn-google-sign-in" href="/users/auth/google">Sign In / Sign Up with Google</a>
+</p>
