--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -9,7 +9,7 @@ body {
     .layout-main { 
         min-height: 80vh;
 
-        p {
+        .sign-in-content {
             text-align: center;
             margin-top: 20px;
             margin-block-start: 1.2em;
