--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -13,6 +13,6 @@
     </a>
 </form>
 
-<p>
+<p class="sign-in-content">
     <a class="btn-google-sign-in" href="/users/auth/google">Sign In with Google</a>
 </p>
