--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -15,6 +15,6 @@
     </a>
 </form>
 
-<p>
+<p class="sign-in-content">
     <a class="btn-google-sign-in" href="/users/auth/google">Sign In / Sign Up with Google</a>
 </p>
